<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/msafiriblur"
    android:id="@+id/lmain"
    android:orientation="vertical"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/msafiriblur"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="160dp"
        android:id="@+id/logo"
        android:transitionName="logo_transition"

        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/main_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/progressBar"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true">

                        <ProgressBar
                            android:layout_gravity="center"
                            android:layout_width="60dp"
                            android:layout_height="60dp" />

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorButton"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:text="Please wait..."/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edemail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_shadow"
                            android:drawableLeft="@drawable/envelope"
                            android:drawablePadding="2dp"
                            android:ems="10"
                            android:maxLines="1"
                            android:hint="@string/hintemail"
                            android:padding="8dp"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="8dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginLeft="40dp"
                            android:textColorHint="#3B3B3B" />

                        <EditText
                            android:id="@+id/edpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/email"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edittext_shadow"
                            android:drawableLeft="@drawable/ic_action_name"
                            android:drawablePadding="2dp"
                            android:ems="10"
                            android:hint="@string/hintpassword"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:paddingLeft="8dp"
                            android:textColorHint="#3B3B3B" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:layout_marginRight="40dp"
                            android:layout_marginLeft="40dp"
                            android:id="@+id/signbtn"
                            android:layout_below="@+id/password"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_bg_shadow"
                            android:text="Sign In"
                            android:textColor="@android:color/white" />
                        <com.eleganzit.msafiridriver.utils.RobotoMediumTextView
                            android:layout_width="match_parent"
                            android:text="Forgot Password"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginLeft="40dp"
                            android:textColor="#DA4143"
                            android:textStyle="bold"
                            android:id="@+id/forgot"
                            android:layout_below="@+id/signbtn"
                            android:gravity="end"
                            android:layout_height="wrap_content" />

                        <com.eleganzit.msafiridriver.utils.RobotoMediumTextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/registerhere"
                            android:layout_marginRight="40dp"
                            android:layout_marginLeft="40dp"
                            android:gravity="center"
                            android:layout_below="@+id/forgot"
                            android:id="@+id/registertxt"
                            android:textColor="#0D3A61"
                            android:layout_gravity="center"
                            />

                        <LinearLayout
                            android:id="@+id/last"
                            android:layout_below="@+id/forgot"
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <com.eleganzit.msafiridriver.utils.RobotoMediumTextView
                                android:id="@+id/signinwith"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="40dp"
                                android:layout_marginLeft="40dp"
                                android:text="Sign In With"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:layout_gravity="center"
                                />
                            <LinearLayout
                                android:id="@+id/bottom"
                                android:layout_width="match_parent"
                                android:layout_marginRight="40dp"
                                android:layout_marginLeft="40dp"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAllCaps="false"
                                    android:layout_weight="1"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/edittext_shadow"
                                    android:layout_marginRight="8dp"
                                    android:text="facebook"
                                    android:textStyle="bold"
                                    android:id="@+id/facebookbtn"
                                    android:textColor="#385C8E" />
                                <Button
                                    android:layout_weight="1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAllCaps="false"
                                    android:textStyle="bold"
                                    android:maxLines="1"
                                    android:id="@+id/googlebtn"
                                    android:ellipsize="end"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/edittext_shadow"
                                    android:text="Google+"
                                    android:layout_marginLeft="8dp"
                                    android:textColor="#DA4143" />
                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

        </ScrollView>


    </RelativeLayout>


</LinearLayout>
</RelativeLayout>